<resources>
    <string name="app_name">Kotlin_lesson_3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_city">Москва</string>
    <string name="hint_city_coordinates">lt/ln: 35.781, 84.453</string>
    <string name="text_temperature_label">Значение температуры</string>
    <string name="hint_temperature_value">+20C</string>
    <string name="text_feels_like_label">Температура ощущается</string>
    <string name="hint_feels_like_value">+30C</string>
</resources>